# esm-datastore

./: .dockerignore  .env  .gitignore  .rsyncignore  Cargo.toml  Dockerfile  README.md  build.rs  build_prod  deploy.sh  deploy_dev  deploy_dev.sh  deploy_prod  deploy_prod.sh  docker-compose.yml  remote_build.sh  remote_deploy.sh  remote_deploy_dev.sh  remote_deploy_prod.sh  restart.sh  restart_esm_admin.sh  test.sh  trust.sh
common/db/: Cargo.toml
common/db/src/models/: checker.rs  config.rs  game.rs  gplayer.rs  invites.rs  item.rs  mod.rs  prize.rs  rank.rs  shop.rs  spinner.rs  subscription.rs  tournament.rs  user.rs  winner.rs
common/jwk/: Cargo.toml
common/jwk/src/jwk/: fetch_keys.rs  get_max_age.rs  jwk_auth.rs  mod.rs  verifier.rs
deploy/: README.md  common_env.sh  docker-compose.yaml  rebuild.sh  remote_deploy_esm_admin.sh  restart_all.sh  restart_esmserver.sh
deploy/admin/: Dockerfile  start.sh
deploy/admin/www/: index.html  service-worker.js  service-worker.js.map
deploy/admin/www/css/: app.0854a9.css  app.0854a9.css.map  app.0fb7f3.css  app.0fb7f3.css.map  app.12a4ed.css  app.12a4ed.css.map  app.2835b2.css  app.2835b2.css.map  app.28ad09.css  app.28ad09.css.map  app.38f351.css  app.38f351.css.map  app.49f660.css  app.49f660.css.map  app.581d36.css  app.581d36.css.map  app.599d54.css  app.599d54.css.map  app.64c190.css  app.64c190.css.map  app.663c6e.css  app.663c6e.css.map  app.73b7f0.css  app.73b7f0.css.map  app.92b4a1.css  app.92b4a1.css.map  app.c55859.css  app.c55859.css.map  app.css  app.css.map  app.faa3cc.css  app.faa3cc.css.map  app.faf2cd.css  app.faf2cd.css.map  app.fc9343.css  app.fc9343.css.map
deploy/admin/www/js/: app.0854a9.js  app.0fb7f3.js  app.12a4ed.js  app.2835b2.js  app.28ad09.js  app.38f351.js  app.49f660.js  app.581d36.js  app.599d54.js  app.64c190.js  app.663c6e.js  app.73b7f0.js  app.92b4a1.js  app.c55859.js  app.faa3cc.js  app.faf2cd.js  app.fc9343.js  app.js
deploy/certs/: regen.sh
deploy/data/: dumb.txt  dump.sql  initdb.sql  preset.sql  restore.sh
deploy/database/: docker-compose.yaml
deploy/database/postgres/: dump.txt
deploy/database/postgres/master/: Dockerfile  postgresql.conf
deploy/database/postgres/standby/: Dockerfile
deploy/front/: envoy.yaml
deploy/gloader/: Dockerfile  db_cert.cer  start.sh
deploy/grpc_web_proxy/: envoy-v2.yaml  envoy.yaml
deploy/micro-services/: docker-compose.yaml
deploy/micro-services/admin/: Dockerfile  start.sh
deploy/micro-services/admin/www/: index.html  service-worker.js
deploy/micro-services/admin/www/css/: app.db1a3f.css  app.db1a3f.css.map  app.f750fd.css  app.f750fd.css.map
deploy/micro-services/admin/www/js/: app.db1a3f.js  app.f750fd.js
deploy/micro-services/gloader/: Dockerfile  start.sh
deploy/micro-services/grpc_web_proxy/: envoy.yaml
deploy/micro-services/postgres/master/: Dockerfile  setup.sh
deploy/micro-services/postgres/schema/: schema.sql
deploy/micro-services/service/: Dockerfile  start.sh
deploy/micro-services/stripe/: Dockerfile  start.sh
deploy/postgres/: Dockerfile  dump.txt  initial_data.sql  pg_hba.conf  ssl-conf.sh
deploy/postgres/master/: Dockerfile  conf.sql  initdb.sql  setup.sh
deploy/postgres/schema/: schema.sql
deploy/postgres/standby/: Dockerfile  docker-entrypoint.sh  setup.sh
deploy/service/: Dockerfile  start.sh
deploy/stripe/: Dockerfile  start.sh
deploy/stripe/www/: home.js  index.js  package.json
deploy/stripe/www/routes/: home.js
proto/: adminapi.proto  convert.sh  esmapi.proto
proto/js/: adminapi_grpc_web_pb.js  adminapi_pb.js  esmapi_grpc_web_pb.js  esmapi_pb.js
src/: config.rs  cryptic.rs  errors.rs  jwt.rs  main.rs
src/client/: checker.rs  checker_current_game.rs  checker_leaderboard.rs  checker_subscriber.rs  config.rs  game.rs  gplayer.rs  handler.rs  item.rs  msgpush.rs  raffle.rs  test.rs  test_db_conn.rs  user.rs
src/db/: config.rs  game.rs  gplayer.rs  item.rs  mod.rs  prize.rs  rank.rs  shop.rs  spinner.rs  subscription.rs  tournament.rs  user.rs  winner.rs
src/jwk/: configuration.rs  jwk_auth.rs  verifier.rs
src/micro_services/: config.rs  esm.code-workspace  test_db_conn.rs
src/micro_services/checkers/: checker_current_game.rs  checker_leaderboard.rs  checker_subscriber.rs  checker_unclaim.rs  config.rs
src/micro_services/gloader/: config.rs  gloader.rs  handler.rs
src/micro_services/wwwloader/: config.rs
src/svc/: adminapi.rs  esmapi.rs  mod.rs
src/test/: config.rs  login.rs  prize.rs  shop.rs  subscription.rs  test.rs  tournament.rs  winner.rs
