[package]
name = "esm-datastore"
version = "0.1.0"
authors = ["Ken Chong <thienpow@gmail.com>"]
edition = "2018"
default-run = "esmserver"

[[bin]]
name = "esmserver"
path = "src/main.rs"

[[bin]]
name = "checker_current_game"
path = "src/micro_services/checkers/checker_current_game.rs"

[[bin]]
name = "checker_leaderboard"
path = "src/micro_services/checkers/checker_leaderboard.rs"

[[bin]]
name = "checker_subscriber"
path = "src/micro_services/checkers/checker_subscriber.rs"

[[bin]]
name =  "gloader"
path = "src/micro_services/gloader/gloader.rs"

[[bin]]
name =  "wwwloader"
path = "src/micro_services/wwwloader/wwwloader.rs"

[[bin]]
name = "test_db_conn"
path = "src/micro_services/test_db_conn.rs"

[dependencies]
esm-db = { path = "common/db" }
esm-jwk = { path = "common/jwk" }

ring = "0.16.15"
jsonwebtoken = "7.2.0"
argonautica = "0.2.0"


failure = "0.1.8"
num_cpus = "1.13.0"
derive_more = "0.99.11"

bytes = "1.0"
prost-types = "0.7"
prost = "0.7"


reqwest = { version = "0.11.0", features = ["blocking", "json"] }
warp =  "0.3.1"
futures = { version = "0.3.5", default-features = false, features = ["alloc"]}
http = "0.2"

rand = "0.8.3"


# Below is for database
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber =  { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"


chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.2.0", features = ["serde"]}
num-traits = "0.2.14"

uuid = { version = "0.7", features = ["serde", "v4"] }
bb8 = "0.7.0"
bb8-postgres = "0.7.0"
tokio-postgres = "0.7"
postgres = "0.19.0"

tonic = {version = "0.4.0", features = ["tls"] } 
tokio = { version = "1.0.2", features = ["rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
tokio-stream = { version =  "0.1.2", features = ["net"] }
async-stream = "0.3"
tower = { version = "0.4.3" }

lazy_static = "1.4.0"
log = "0.4.8"
postgres-native-tls = "0.5.0"
native-tls = "0.2"
rustls = "0.19"
anyhow = "1.0.40"
config = "0.11.0"

[build-dependencies]
tonic-build = "0.4.0"