[package]
name = "esm-jwk"
version = "0.1.0"
authors = ["Ken Chong <thienpow@gmail.com>"]
description = "ESM JWK"
publish = false
edition = "2018"

[lib]
name = "esm_jwk"

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
jsonwebtoken = "7.2.0"

# Below is for database
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"


tonic = {version = "0.4.0", features = ["tls"] } 
tokio = { version = "1.0.2", features = ["rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
tokio-stream = { version =  "0.1.2", features = ["net"] }
async-stream = "0.3"